--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.14.0",
     "mongodb": "^2.2.7",
     "mongoose": "^4.9.5",
+    "mysql": "^2.13.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
