--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "export NODE_ENV=test && mocha test/**/*test.js",
     "start": "export NODE_ENV=development && nodemon server.js",
-    "webpack": "webpack -d --watch",
+    "webpack": "webpack",
     "wpw": "webpack -w",
     "coverage": "istanbul cover mocha",
     "eslint": "eslint .",
