--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^4.9.5",
     "mysql": "^2.13.0",
     "react": "^15.3.0",
+    "react-addons-test-utils": "^15.6.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
@@ -43,6 +44,7 @@
     "chai": "^3.5.0",
     "config": "^1.21.0",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.9.1",
     "eslint": "^3.2.2",
     "eslint-plugin-react": "^6.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
